Ahmed Belhadj - Bootstrap
Added navbar.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="row">
           <div class="col-sm-12">
               <h1>Start Here!</h1>
+              Hi Logan!
           </div>
       </div>
     </div><!-- container -->
