--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <div class="col-sm-12">
               <h1>Start Here!</h1>
               Hi Logan!
+              Hey Ahmed!
           </div>
       </div>
     </div><!-- container -->
